Fix issue where posts were not being displayed in the index page when logged in. Missing a comma in the SQL command in blog.py for creating the post. Fix form to specify method=post for create.html template. Fix syntax error i.id to u.id in update view of blog.py.

--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -16,6 +16,7 @@
 <section>
     <header>
         {% block header %}{% endblock %}
+        <link rel="shortcut icon" href="#">
     </header>
     {% for message in get_flashed_messages() %}
     <div class="flash">{{ message }}</div>
