--- a/flaskr/templates/blog/create.html
+++ b/flaskr/templates/blog/create.html
@@ -5,11 +5,11 @@
 {% endblock %}
 
 {% block content %}
-    <form>
-        <label for="Title">Title</label>
-        <input name="Title" id="title" value="{{ request.form['title'] }}" required>
-        <label for="Body">Body</label>
-        <textarea name="Body" id="body">{{ request.form['body'] }}</textarea>
+    <form method="post">
+        <label for="title">Title</label>
+        <input name="title" id="title" value="{{ request.form['title'] }}" required>
+        <label for="body">Body</label>
+        <textarea name="body" id="body">{{ request.form['body'] }}</textarea>
         <input type="submit" value="Save">
     </form>
 {% endblock %}
